<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MenuFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:src="@drawable/hangman" />

    <Button
        style="@style/btnStyle"
        android:layout_centerInParent="true"
        android:id="@+id/new_game_btn"
        android:layout_below="@+id/imageView"
        android:text="@string/new_game_btn"
        />

    <Button
        style="@style/btnStyle"
        android:layout_centerInParent="true"
        android:id="@+id/about_us_btn"
        android:layout_below="@+id/new_game_btn"
        android:text="@string/about_us_btn"
        />

    <Button
        style="@style/btnStyle"
        android:layout_centerInParent="true"
        android:id="@+id/exit_btn"
        android:layout_below="@+id/about_us_btn"
        android:text="@string/exit_btn"
        />



</RelativeLayout>

